Registration module completetd

--- a/header.html
+++ b/header.html
@@ -2,5 +2,5 @@
 <link rel="stylesheet" type="text/css" href="style.css" >
 
 <div class="div_nav" >
-    eCom.com
+    eCom.com (HTML version please change the header)
 </div>
